[gd_scene load_steps=3 format=3 uid="uid://dstcm70jjmg6b"]

[ext_resource type="Script" uid="uid://dpfcasa3iaq0b" path="res://game/ui/hud/action_buttons.gd" id="1_7gg4r"]
[ext_resource type="PackedScene" uid="uid://cc7rjd0413knw" path="res://game/ui/hud/action_button.tscn" id="2_673ll"]

[node name="ActionButtons" type="VBoxContainer"]
offset_right = 180.0
offset_bottom = 292.0
size_flags_vertical = 3
theme_override_constants/separation = 4
script = ExtResource("1_7gg4r")

[node name="TVButton" parent="." instance=ExtResource("2_673ll")]
layout_mode = 2
size_flags_vertical = 3
action_name = "teevee"

[node name="DrawButton" parent="." instance=ExtResource("2_673ll")]
layout_mode = 2
size_flags_vertical = 3
action_name = "Dwaw"

[node name="PCButton" parent="." instance=ExtResource("2_673ll")]
layout_mode = 2
size_flags_vertical = 3
action_name = "Use PC"

[node name="SleepButton" parent="." instance=ExtResource("2_673ll")]
layout_mode = 2
size_flags_vertical = 3
action_name = "Eep"

[connection signal="pressed" from="TVButton" to="." method="_on_tv_button_pressed"]
[connection signal="pressed" from="DrawButton" to="." method="_on_draw_button_pressed"]
[connection signal="pressed" from="PCButton" to="." method="_on_pc_button_pressed"]
[connection signal="pressed" from="SleepButton" to="." method="_on_sleep_button_pressed"]
